@@ -53,7 +53,7 @@ static void openLogFile ()
       /* The following line is equivalent to: */
       /* setlinebuf (angelDebugLogFile); */
       setvbuf(angelDebugLogFile, (char *)NULL, _IOLBF, 0);
-#if defined(__CYGWIN32__) || defined(__CYGWIN__)
+#if defined(__CYGWIN__)
       setmode(fileno(angelDebugLogFile), O_TEXT);
 #endif
     }
